[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/actors/player.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/player_anim.tres" type="SpriteFrames" id=2]
[ext_resource path="res://assets/sounds/sfx_coin.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/sfx_clash.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sprites/hand_grab.png" type="Texture" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.55866
height = 0.576271

[sub_resource type="CapsuleShape2D" id=2]
radius = 0.669113
height = 5.65232

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 16, 20 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 16, 0, 16, 20 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 16, 20 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 7 )
region = Rect2( 48, 0, 16, 20 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
animation = "idle_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.198425, 5.55591 )
shape = SubResource( 1 )

[node name="FreezeTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Feet" type="Area2D" parent="." groups=[
"player_feet",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Feet"]
position = Vector2( 0.000263214, 12.7428 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
smoothing_speed = 10.0

[node name="FoodIndicator" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -24 )
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 7 )
frame = 2
playing = true

[node name="CoinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="ClashSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="timeout" from="FreezeTimer" to="." method="_on_FreezeTimer_timeout"]
